objects/Costing__c.object
<CustomObject>
    <fields>
        <fullName>Architect__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Architect</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Construct</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>CASE(
TEXT(Level__c) ,
&apos;Consultant&apos;, 29,
&apos;Senior Consultant&apos;, 46,
&apos;Architect&apos;, 63,
&apos;Principal&apos;, 88,
&apos;Partner&apos;, 124,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deploy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deploy</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consultant_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Costing__c</fullName>
        <label>Project Costing</label>
        <referenceTo>Project_Costing__c</referenceTo>
        <relationshipLabel>Costings</relationshipLabel>
        <relationshipName>Costings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Price_45__c</fullName>
        <formula>Cost__c /0.55</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Price (45%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Support</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Price__c</fullName>
        <formula>Cost__c * Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <formula>Architect__c +  Construct__c + Validate__c + Deploy__c + Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Total_Days__c * 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Price__c</fullName>
        <formula>IF(Sales_Rate__c  * Total_Hours__c = NULL, 0, Sales_Rate__c  * Total_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Validate</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Costing</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>